# adk-task-scheduler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
adk_task_scheduler/: __init__.py  app.py  config.py  decorator.py  invoker.py  lifespan.py
example/: main.py
example/agents/ticker_agent/: __init__.py  agent.py
tests/: conftest.py  test_app.py  test_condition_features.py  test_config.py  test_decorator.py  test_invoker.py  test_lifespan.py  test_real_agent_smoke.py
