[project]
name = "adk-task-scheduler"
version = "0.1.0"
description = "Auto-scheduling for Google ADK agents — bake cron/interval/condition triggers into agent definitions, deployed alongside get_fast_api_app"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sthitaprajnas Sahoo", email = "papu.sahoo@gmail.com" }]
keywords = ["google-adk", "agents", "scheduler", "cron", "fastapi", "llm", "apscheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-adk>=1.7.0",
    "apscheduler>=3.10.4,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/STHITAPRAJNAS/adk-task-scheduler"
Repository = "https://github.com/STHITAPRAJNAS/adk-task-scheduler"
"Bug Tracker" = "https://github.com/STHITAPRAJNAS/adk-task-scheduler/issues"
Changelog = "https://github.com/STHITAPRAJNAS/adk-task-scheduler/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
